[gd_scene load_steps=12 format=2]

[ext_resource path="res://minigames/Rain Trash/main/main.gd" type="Script" id=1]
[ext_resource path="res://minigames/Rain Trash/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 927.545, 14.031 )

[sub_resource type="DynamicFont" id=2]
size = 52
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/GaramondPremrPro-Smbd.otf"

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/advanced_pixel-7.ttf"

[sub_resource type="DynamicFont" id=6]
size = 52
font_data = SubResource( 5 )

[sub_resource type="Animation" id=7]
resource_name = "ScoreDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.498039 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "scoreUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 0.172549, 1, 0, 0.498039 ), Color( 1, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../UI/Score/Score:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )
vel = 216

[node name="World" type="Node2D" parent="."]

[node name="Destruction_Area" type="Area2D" parent="World"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Destruction_Area"]
position = Vector2( 961.983, 1108.09 )
shape = SubResource( 1 )

[node name="Spawn_Points" type="Node2D" parent="World"]

[node name="Spawn1" type="Position2D" parent="World/Spawn_Points"]
position = Vector2( 360, 0 )

[node name="Spawn2" type="Position2D" parent="World/Spawn_Points"]
position = Vector2( 600, 0 )

[node name="Spawn3" type="Position2D" parent="World/Spawn_Points"]
position = Vector2( 840, 0 )

[node name="Spawn4" type="Position2D" parent="World/Spawn_Points"]
position = Vector2( 1080, 0 )

[node name="Spawn5" type="Position2D" parent="World/Spawn_Points"]
position = Vector2( 1320, 0 )

[node name="Spawn6" type="Position2D" parent="World/Spawn_Points"]
position = Vector2( 1560, 0 )

[node name="Timer" type="Timer" parent="World/Spawn_Points"]

[node name="back_PlayableArea" type="ColorRect" parent="World"]
margin_left = 240.0
margin_right = 1680.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0.752941, 0.752941, 0.752941, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]

[node name="Result" type="Label" parent="UI"]
visible = false
margin_left = 853.505
margin_top = 378.0
margin_right = 1084.51
margin_bottom = 453.0
custom_fonts/font = SubResource( 2 )
text = "PLACEHOLDER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI"]
margin_left = 860.0
margin_top = 470.0
margin_right = 1060.0
margin_bottom = 540.0
text = "Iniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="VBoxContainer" parent="UI"]
margin_left = 1681.0
margin_top = 26.0
margin_right = 1919.0
margin_bottom = 127.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Score"]
margin_right = 238.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PUNTOS:"
align = 1
valign = 1

[node name="Score" type="Label" parent="UI/Score"]
margin_top = 47.0
margin_right = 238.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="CurrentObjective" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 267.0
margin_bottom = 240.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="UI/CurrentObjective"]
margin_right = 267.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Objetivo actual:"
align = 1
valign = 1

[node name="Score" type="Label" parent="UI/CurrentObjective"]
margin_top = 47.0
margin_right = 267.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1

[node name="Effects" type="ColorRect" parent="."]
margin_right = 1915.0
margin_bottom = 1081.0
mouse_filter = 2
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Effects"]
anims/ScoreDown = SubResource( 7 )
anims/scoreUp = SubResource( 8 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="body_entered" from="World/Destruction_Area" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="World/Spawn_Points/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/Start" to="." method="_on_Start_pressed"]
